# strata

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
.claude/skills/run-app/: SKILL.md
.claude/tasks/: README.md
.claude/tasks/phase-2-workbench/: P2-01-query-round-trip.md  P2-02-results-state-from-runs.md  P2-03-recordbatch-results-model.md  P2-04-autocomplete.md  P2-05-explain-plan-view.md  P2-06-running-state.md  P2-07-table-chart-switcher.md  P2-08-status-bar-pager-and-info.md  P2-09-find-in-results.md  P2-10-record-view.md  P2-11-copy-affordances.md  P2-12-nested-cell-view.md  P2-13-column-sort.md  P2-14-clear-results.md  P2-15-run-explain-buttons.md  P2-16-editor-toolbar-actions.md  P2-18-validation-and-squiggles.md  P2-19-undo-redo.md  P2-20-keyboard-shortcuts.md  P2-21-tabs-and-split-nits.md  P2-22-completion-docs-and-signatures.md  P2-23-validation-engine-fitness.md  README.md
.claude/tasks/phase-3-catalog-inspector-drawer/: P3-01-layout-shell.md  P3-02-catalog-sidebar.md  P3-03-catalog-rescan.md  P3-04-catalog-validity.md  P3-05-view-dependencies.md  P3-06-catalog-context-menus.md  P3-07-part-badges-nested-shape.md  P3-08-column-inspector.md  P3-09-profiling.md  P3-10-profile-cost-confirm.md  P3-11-drawer-scaffold.md  P3-12-drawer-problems.md  P3-13-drawer-events.md  P3-14-drawer-history.md  README.md
.claude/tasks/phase-4-multi-window/: P4-01-multiwindow-shell-shared-state.md  P4-02-launcher-window.md  P4-03-settings-window-shell.md  P4-04-settings-appearance.md  P4-05-settings-data-display.md  P4-06-settings-system.md  P4-07-settings-engine.md  P4-08-settings-keymap.md  P4-09-settings-search.md  P4-10-export-window.md  P4-11-config-register-table-modal.md  (+4 more)
assets/: main.css
assets/icons/: strata.icns
crates/strata-code-editor/: Cargo.toml
crates/strata-code-editor/src/: completion.rs  editor_data.rs  editor_line.rs  editor_theme.rs  editor_ui.rs  languages.rs  lib.rs  metrics.rs  syntax.rs
crates/strata-core/: Cargo.toml
crates/strata-core/src/: config.rs  keymap.rs  lib.rs  project.rs  theme.rs  util.rs
crates/strata-core/src/engine/: catalog.rs  config.rs  explain.rs  export.rs  functions.rs  message.rs  mod.rs  profile.rs  query.rs  serialize.rs  worker.rs
crates/strata-core/src/engine/plan/: detail.rs  fmt.rs  metrics.rs  mod.rs  sql.rs  tree.rs
crates/strata-core/src/engine/sql/: complete.rs  context.rs  fuzzy.rs  lex.rs  mod.rs  symbols.rs  validate.rs
crates/strata-core/src/engine/sql/complete/: mod.rs  ranking.rs  tests.rs  vocabulary.rs
crates/strata-core/tests/: engine_round_trip.rs  function_catalog.rs  project_load.rs
crates/strata-dioxus/: Cargo.toml  Dioxus.toml
crates/strata-forms/: Cargo.toml
crates/strata-forms-macro/: Cargo.toml
crates/strata-forms/src/: lib.rs
crates/strata-freya/: Cargo.toml
crates/strata-freya/src/: keymap.rs  main.rs  menu.rs  theme.rs
crates/strata-freya/src/apps/: mod.rs
crates/strata-freya/src/apps/project/: close.rs  mod.rs  project.rs
crates/strata-freya/src/apps/project/contexts/: engine_ctx.rs  mod.rs
crates/strata-freya/src/apps/project/query/: mod.rs  run_query.rs  validate.rs
crates/strata-freya/src/apps/project/state/: channel.rs  hooks.rs  mod.rs  project.rs  session.rs
crates/strata-freya/src/apps/project/views/: header.rs  mod.rs
crates/strata-freya/src/apps/project/views/dialogs/: close_confirm.rs  mod.rs
crates/strata-freya/src/apps/project/views/workbench/: empty.rs  mod.rs
crates/strata-freya/src/apps/project/views/workbench/editor/: actions.rs  mod.rs  tab.rs  toolbar.rs
crates/strata-freya/src/apps/project/views/workbench/results/: cell_view.rs  chart.rs  copy.rs  empty.rs  error.rs  explain_plan.rs  find.rs  mod.rs  record_view.rs  running.rs  selection.rs  sort.rs  status_bar.rs  toolbar.rs
crates/strata-freya/src/apps/project/views/workbench/results/datagrid/: cell.rs  header.rs  interaction.rs  mod.rs  model.rs  row.rs
crates/strata-freya/src/apps/project/views/workbench/results/explain_plan/: mod.rs  node.rs  palette.rs  preview.rs
crates/strata-freya/src/apps/project/views/workbench/tab_bar/: bar.rs  controls.rs  drag.rs  menu.rs  mod.rs  tab.rs
crates/strata-freya/src/components/: divider.rs  dot.rs  icon.rs  mod.rs  run_button.rs  segmented_toggle.rs  toggle_button.rs  typography.rs
crates/strata-freya/src/engine/: mod.rs
crates/strata-freya/themes/: daylight.json  midnight.json  theme.schema.json
crates/strata-model/: Cargo.toml
crates/strata-model/src/: catalog.rs  diagnostics.rs  form.rs  lib.rs  profile.rs  results.rs
docs/: A9_DATAFUSION_UPGRADE.md  COMPLETION_SPEC.md  CONNECTIONS_SPEC.md  DESIGN_SPEC.md  DESIGN_SYSTEM.md  DEV_TASKS.md  EDITOR_LANG_SPIKE.md  EXPLAIN_PLAN_SPEC.md  EXPORT_OPTIONS.md  F7-shared-state.md  FEATURES.md  FREYA_PORT_PLAN.md  FREYA_STATE_ARCHITECTURE.md  FREYA_THEME_SPEC.md  IMPORT_OPTIONS.md  OVERLAY_ARCHITECTURE.md  PHASE0_HANDOFF.md  PHASE1_HANDOFF.md  SNAPSHOT_SPEC.md  SQL_LANGUAGE_SPEC.md  freya-state-dataflow.mermaid
sample/: products.parquet  regions.csv  signups.json  users.parquet
sample/.strata/: project.json
src/: app.rs  config.rs  ddl.rs  diagnostics.rs  engine.rs  engine_config.rs  events.rs  hotkeys.rs  inspector.rs  keymap.rs  layout.rs  main.rs  menu.rs  overlays.rs  plan.rs  profile.rs  project.rs  query_error.rs  runs.rs  serialize.rs  session.rs  settings.rs  state.rs  tabs.rs  theme.rs  util.rs  window.rs
src/action/: catalog.rs  mod.rs  overlay.rs  overlay_bus.rs  panel.rs  projects.rs  query.rs  tab.rs
src/engine/: catalog.rs  config.rs  explain.rs  export.rs  message.rs  mod.rs  query.rs  serialize.rs
src/hooks/: use_shortcuts.rs
src/model/: log.rs  schema.rs
src/plan/: detail.rs  metrics.rs  sql.rs  tree.rs
src/sql/: complete.rs  context.rs  lex.rs  mod.rs  symbols.rs  validate.rs
src/ui/: activity_rail.rs  drawer.rs  errview.rs  header.rs  icons.rs  inspector.rs  launcher.rs  mod.rs  overlay.rs  settings.rs  sidebar.rs  statusbar.rs  workspace.rs
themes/: daylight.json  midnight.json  theme.schema.json
themes/themes.strata/: project.json
(+140 files in other folders)
