[workspace]
# Virtual manifest — no root package. Each frontend is a sibling binary crate on the
# shared core (Freya port): `strata-dioxus` (the transitional Dioxus app) and, coming,
# `strata-freya`. See docs/FREYA_PORT_PLAN.md.
members = [
    "crates/strata-dioxus",
    "crates/strata-forms",
    "crates/strata-forms-macro",
    "crates/strata-model",
    "crates/strata-core",
]
# Bare `cargo build` / `cargo run` at the root target only the Dioxus app, so adding the
# Skia-heavy `strata-freya` member later never pulls Skia into the default build (build it
# explicitly with `-p strata-freya`).
default-members = ["crates/strata-dioxus"]
resolver = "2"

# Profiles are honoured only at the workspace root (a virtual manifest), so they live here
# and apply workspace-wide.
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
