[package]
name = "strata-freya"
version = "0.2.0"
edition = "2021"
description = "Strata's Freya (Skia/native) frontend — the Freya-port target. Rides the shared strata-core alongside the transitional strata-dioxus app."
license = "MIT"

[dependencies]
# Native GUI (Skia), from our fork (see the root `[workspace.dependencies]`). `radio` = per-window
# Session store. The editor is our vendored `strata-code-editor` (owned fork of freya-code-editor),
# NOT freya's `code-editor` feature — so we control cursor / gutter / line highlight / syntax palette
# / squiggles / autocomplete.
freya = { workspace = true, features = ["radio", "query", "menu"] }

# The shared core: engine (Command/Event protocol + worker handle) + the data vocabulary.
strata-core = { path = "../strata-core" }
strata-model = { path = "../strata-model" }

# Our owned code-editor surface (vendored from freya-code-editor; see the crate's lib.rs).
strata-code-editor = { path = "../strata-code-editor" }

# The SQL grammar fed to the editor (derekstride/tree-sitter-sql). Its handle comes via
# tree-sitter-language, so `LANGUAGE` drops into `EditorLanguage::new` with no direct tree-sitter dep.
tree-sitter-sequel = "0.3"

# The native theme format (themes/*.json) → deserialized into the Freya ColorsSheet.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Editor toolbar Format: pretty-print the SQL buffer in place.
sqlformat = "0.3"

# Structured logging (same facade strata-core emits on).
tracing = "0.1.44"

# Stable per-tab identity (TabId) + serde for the future session snapshot.
uuid = { version = "1", features = ["v4", "serde"] }

# Executor-agnostic timer for the running state's elapsed ticker — the same primitive
# freya-sdk's `use_timeout` rides (Freya's UI executor has no timer of its own).
async-io = "2.5"

# The T2 close bridge's veto channel (winit `on_close` hook → UI executor wake-up), and
# `block_on` in the freya-query unit tests.
futures = "0.3"

[dev-dependencies]
# Headless Skia renderer for the `#[ignore]`d preview harnesses (e.g. `plan_preview`):
# mounts a real surface under the real theme and snapshots it to a PNG for eyeballing.
freya-testing = { workspace = true }
